--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
     "tailwindcss": "^3.4.16"
+  },
+  "dependencies": {
+    "flowbite": "^2.5.2"
   }
 }
