Update added restart policy for docker container

--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,7 @@ services:
       - "traefik.http.routers.ettih.middlewares=my-traefikBouncer@file,my-cloudflarewarp@file"
     networks:
       - proxy
+    restart: always
 
 networks:
   proxy:
