--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,7 @@ services:
       - 3000:3000
     volumes:
       - "/home/ionut/facultate/seminar:/home/ionut/facultate/seminar:rw"
+      - "/home/ionut/facultate/tipizate:/home/ionut/facultate/tipizate:rw"
       - "./.env:/app/.env"
     labels:
       - "traefik.enable=true"
