--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
     "@tailwindcss/typography": "^0.5.15",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.6",
     "flowbite": "^2.5.2",
     "preline": "^2.6.0"
   }
