--- a/compose.yaml
+++ b/compose.yaml
@@ -6,8 +6,9 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - "/home/ubuntu/facultate/seminar:/home/ionut/facultate/seminar:rw"
-      - "/home/ubuntu/facultate/tipizate:/home/ionut/facultate/tipizate:rw"
+      - "/home/opc/ettihContent/labs:/ettihData/labs:rw"
+      - "/home/opc/ettihContent/tipizate:/ettihData/tipizate:rw"
+      - "/home/opc/ettihContent/blog:/ettihData/blog:rw"
       - "./.env:/app/.env"
     labels:
       - "traefik.enable=true"
